--- a/styles.css
+++ b/styles.css
@@ -746,7 +746,7 @@ header nav {
 	
 	/****1-ACCEUIL***/
 #accueil{
-	min-height:80vh;
+	min-height:40vh;
 	padding-top:80px;
 }
 .blue-line {
@@ -766,7 +766,7 @@ header nav {
 	 		}
 
 .slider-text{
-	margin-top: 0%;
+	margin-top: 5%;
 	margin-left:0%;
 	position:static;
 	color:#585858;
@@ -779,41 +779,44 @@ display:none;
 
 .slider-text h1{
 	margin-bottom:1em;
-	font-size: 1.4em;
+	text-align:left;
 	line-height: 1.2em;
 	letter-spacing: 0;
+	padding-left:80px; 
 	}
+
 .slider-text p{
 	font-size: 1em;
 	line-height: 1.5em;
 	letter-spacing: 0px;
-	margin: 30px 0 40px 0;
+	padding-left:80px; ;
+	margin-bottom:100px;
+	text-align:left;
 		}
 
-.arrows{
-	font-size:0.3em}
+  .slider-text a{
 	
+	font-size: 0.8em;
+	padding: 20px;
+	margin-left:80px;
+  }
+
 
 .a-left{
-	top: 18%;
+	
+  
+	top: 20%;
 }
 
 .a-right{
 	
-    top: 18%;
+	top: 20%;
 }
-
-
-
 	
 	
 	
  /****2-SERVICES***/
  
- #services{
-	 padding-top:4.5em;
-	 padding-left:1.7em;
-	  }
 	  
  .services-text{
 	 padding-bottom:0;
@@ -822,8 +825,8 @@ display:none;
 	  }
 	  
 .services-text article {
-	font-size: 1em;
-	line-height: 2em;
+	font-size: 0.8em;
+	line-height: 1.5em;
 	text-align: justify;
 	padding-top: 25px;
 	padding-bottom:0;
@@ -844,12 +847,13 @@ display:none;
  }
  
  .services-liste ul{
-	font-size:1em;
+	font-size:1.1em;
 	padding-top:10px;
 }
 
 .services-image{
-	width:100%;
+	width:50%;
+	margin-top:30px;
 	}
 
 
@@ -864,67 +868,68 @@ display:none;
 	
  /****3-PORTFOLIO***/
  #portfolio{
-		padding-top:4.5em;
+		padding-top:0em;
 		}
 	
  hr.line{
   height: 1px;
-  width:60%;
+  width:30%;
  }
  
 #portfolio br{
 	display:none;
 }
 
-.portfolio-text article {
- text-align:justify;
- width:130%;
- margin-top:1.5em
+article {
+ text-align:center;
+ width:100%;
+ margin-top:1.5em;
+
 }
  
- .button-block{
-  width:100px;
-  height:20px;
-  margin:1em 1em 2em 1em;
-  }
-   
- .button-one ,.button-two ,.button-three, .button-four {
-	width: 75px;
-	height: 18px;
-	padding: 8px 8px 8px 8px; 
-	font-size: 0.9em;
-  }
  
- #projets{
-	margin-left:-80px;
-	grid-gap: 45px;
- }
-	
 .eye{
     
-    left: 220px;
+    left: 290px;
 }
 
-	
-	
-	
 	
 	 /****4-CONTACT***/
 
 
-
-form
-	{  
-		width: 78%;
-        bottom: 12%;
-        right: 10%;
-		padding:3px;
-		
-	}
+#blue-overlay{
+	display:none;
 }
 
+form
+	{  	
+		position: relative;
+		background: #DCDCDCy;
+		left: 0;
+		padding: 15px 0px 15px 0px;
+		margin-left: 20%;
+		margin-right: 20%;
+		width: 65%;
+		transform: translate(0);
+	}
+		
+.sent, .message{
+	       width: 90%;
+		max-width: 90%;
+		font-size:0.8em;
+		margin-left:20px;
+		
+}
+h1, p {
+	text-align:center;
+	font-size:1em;
+    
+}
+button{
+	margin-left: 40%;
+}
 
-
+}
 
 
 /**------------------------tablets---------------------------**/
@@ -1014,7 +1019,8 @@ header nav {
 	 padding-top:5.5em;
  }
 
-.services-text article {
+.services-text article{
+
 	font-size: 1em;
 	font-weight:800;
 	line-height: 1.4em;
@@ -1077,7 +1083,7 @@ header nav {
 /*****4- CONTACT****/
 
 form{
-	right: 30%;
+    right: 30%;
     bottom: 20%;
 		
 }
