--- a/styles.css
+++ b/styles.css
@@ -938,17 +938,20 @@ button{
 header{
 	display:block;
 	text-align:center;
-    height:118px;
-
+    
 }
+header nav a {
+	font-size:2em;
+	padding-top:25px;
+}
+
 
 header nav a:hover{
 	border-top:none;
 	}
 	
  header img {
-	width:208.8px;
-	height:45,6px;
+	
 	margin-left:0;
 	margin-top:9px;
 	 }
@@ -960,7 +963,7 @@ header nav {
 
 /****1-ACCEUIL***/
 #accueil{
-	min-height:85vh;
+	min-height:45vh;
 	padding-top:100px;
 }
 .blue-line {
@@ -1008,14 +1011,12 @@ header nav {
 }
 
 
-
-
 	 
 
  /****2-SERVICES***/
  
  #services{
-	 padding-top:5.5em;
+	 padding-top:8.7em;
  }
 
 .services-text article{
@@ -1059,7 +1060,7 @@ header nav {
 
 /****3-PORTFOLIO***/
 .portfolio-text{  
-   padding-top: 2.5em; 
+   padding-top:5.7em; 
 }
  
  hr.line{
@@ -1082,9 +1083,39 @@ header nav {
 /*****4- CONTACT****/
 
 form{
-    right: 30%;
+	right: 30%;
     bottom: 20%;
+	width:430px;
+	height:650px;	
+	background: #DCDCDCy;}
+
+.sent {
+	    width: 85%;
+	    height:5%;
+		max-width: 85%;
+		font-size:0.8em;
+		margin-left:20px;
 		
+}
+.message{
+		width: 85%;
+	    height:15%;
+		max-width: 85%;
+		font-size:0.8em;
+		margin-left:20px;
+		margin-bottom:30px;}
+
+h1, p {
+	text-align:center;
+	font-size:1.1em;
+	margin-left:20px;
+	margin-bottom:30px;
+    
+}
+
+button{
+	margin-left: 30%;
+	
 }
 
 }
