--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,6 @@
          url('RobotoCondensed-Regular-webfont.svg#roboto_condensedregular') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 @font-face {
@@ -64,15 +63,14 @@
 }
 
  /**************************** Menu ***********************************/
- 
 header{
-   	display:flex;
-	z-index:20;
-	top:0; 
-    left:0;
-    right:0;
-    height:auto;
-    position:fixed;
+        display:flex;
+        z-index:20;
+        top:0; 
+        left:0;
+        right:0;
+        height:auto;
+        position:fixed;
 	margin-right:auto;
 	margin-left:10px;
 	margin-bottom:20px;
@@ -83,13 +81,12 @@ header{
 	 margin-left:220px;
 	 margin-top: 25px; 
 	 margin-bottom: 10px;
-	 
 		 }
    
 header nav {
 	display:inline-block;
-    margin-left:570px;
-    margin-top: 35px;
+        margin-left:570px;
+        margin-top: 35px;
 	margin-bottom:40px;
 	word-spacing: 1em;
 	
@@ -113,15 +110,13 @@ header nav a:hover{
     border-top: 3px solid #5897D0;  /* BLUE*/
  }
 
-
-    /******************************************************* page 1 ACCEUIL ***************************************************/
+/************************************************************* page 1 ACCEUIL ***************************************************/
 #accueil{
 	margin-top:2em;
 	margin-right: 0;
 	margin-left:10px;
 	height:auto;
 	max-width:100vw;
-	
 	}
 
 @keyframes slider{
@@ -147,16 +142,14 @@ header nav a:hover{
  height:40px;  
 }
 
-
- #slider{
+#slider{
 	position:relative;
-    width:100%;
+        width:100%;
 	top: 50px;
-    margin-bottom:10px;
+        margin-bottom:10px;
 	z-index:1;
-	overflow:hidden; 
-
-		}
+	overflow:hidden;
+}
 		
 #slider1{
 	float: right;
@@ -180,7 +173,7 @@ header nav a:hover{
 
 .slider-text{
 	position: absolute;
-    left: 10%;
+        left: 10%;
 	top: 25%;
 	padding-bottom: 15px;
 	color: #ffffff;
@@ -189,7 +182,7 @@ header nav a:hover{
 }
 
 .slider-text span {
-    color: #5897D0;	
+        color: #5897D0;	
 }
 
 .slider-text h1{
@@ -218,8 +211,8 @@ header nav a:hover{
 	text-decoration: none;
 	text-align:center;
 	border-radius: 4px;
-    border:none;
-    padding: 10px;
+        border:none;
+        padding: 10px;
 	margin-left:12px;
 }
 
@@ -229,7 +222,7 @@ header nav a:hover{
 
 .a-left{
 	position: absolute;
-    left: -1.5%;
+        left: -1.5%;
 	top: 40%;
 }
 
@@ -255,7 +248,7 @@ header nav a:hover{
 		}
 		
 .services-text{  
-   padding: 20px 0 20px 0;
+       padding: 20px 0 20px 0;
    
 }
 
@@ -279,26 +272,22 @@ header nav a:hover{
 /**********services line&circles separator ********/
 
 #services p { /**********2circles icon***/
-	 font-size: 6px;
-	 text-align:center;
-     position: relative;
-     z-index:2;
-	 
+	font-size: 6px;
+	text-align:center;
+        position: relative;
+        z-index:2; 
  } 
 
 hr.line {
-  margin-top:-22px;
-  height: 1.5px;
-  border: 0;
-  background-color: #E8E8E8;
-  width:9%;
-  position: relative;
-  z-index:1;
- 
+	margin-top:-22px;
+	height: 1.5px;
+        border: 0;
+        background-color: #E8E8E8;
+        width:9%;
+        position: relative;
+        z-index:1;
 }
 	
-
-
 /*************************main section page*****/
 #page {
 	display: flex;
@@ -307,14 +296,13 @@ hr.line {
 	margin-left: 50px;
 	height: auto;
 	width:auto;
-	
 }
 
 
 .services-image {
-    width: 40%;
+        width: 40%;
 	height: auto;
-    min-width:250px;
+        min-width:250px;
 	padding-top:0px;
 	margin:auto;
 				
@@ -323,7 +311,7 @@ hr.line {
  .services-image img{
 	 margin-top:-150px;
 	 width: 100%;
-     max-width: 510px;
+         max-width: 510px;
 	 height: auto;
      
  }
@@ -331,7 +319,7 @@ hr.line {
 .services-liste {
 	width:40%;
 	height: auto;
-    min-width:250px;
+        min-width:250px;
 	margin:auto;  	
 	}
 	
@@ -339,15 +327,13 @@ hr.line {
 	list-style: none;
 	padding-top: 80px;
 	padding-left: 72px;
-	
 }
 
 .designSEO h3{
-   text-align:left;
-   font-family: 'robotobold';
-   font-size: 0.9em;
-   padding-left: 10px;
-   
+  	text-align:left;
+  	font-family: 'robotobold';
+   	font-size: 0.9em;
+        padding-left: 10px;
 }
 
  .designSEO h4 {
@@ -363,30 +349,28 @@ hr.line {
   	 }
 
 .listeicon{
-width:80px;
-margin-left: -77px;
-margin-bottom:-65px;
-padding:0;
+	width:80px;
+	margin-left: -77px;
+	margin-bottom:-65px;
+	padding:0;
 
 }
 
 .listeicon .dot {
-  height: 58px;
-  width: 58px;
-  background-color: transparent;
-  border-radius: 50%;
-  border:2px solid lightgrey;
-  display: inline-block;
-  margin-right:-47px;
-  margin-bottom: -20px;
+  	height: 58px;
+  	width: 58px;
+  	background-color: transparent;
+  	border-radius: 50%;
+  	border:2px solid lightgrey;
+  	display: inline-block;
+  	margin-right:-47px;
+  	margin-bottom: -20px;
 }
 
 
 .listeicon .icons{
 	padding-bottom:50px;
 	}
-
-
 
 /******************************************************************* page 3 PORTFOLIO **************************************************/
 #portfolio{
@@ -426,36 +410,34 @@ padding:0;
 	/**********portfolio line&circles separator ********/
 
 #portfolio p { /**********2circles icon***/
-	 font-size: 6px;
-	 text-align:center;
-     position: relative;
-     z-index:2;
+	font-size: 6px;
+	text-align:center;
+     	position: relative;
+     	z-index:2;
 	 
  } 
 
 hr.line {
-  margin-top:-22px;
-  height: 1.5px;
-  border: 0;
-  background-color: #DCDCDC;
-  width:10%;
-  position: relative;
-  z-index:1;
- 
-}
-	
+  	margin-top:-22px;
+  	height: 1.5px;
+  	border: 0;
+  	background-color: #DCDCDC;
+  	width:10%;
+  	position: relative;
+ 	 z-index:1;
+ }
 	
 	/**********portfolio buttons********/
 
 .button-block{
-  display: flex;
-  justify-content: center; 
-  border:3px solid #E8E8E8;
-  width:350px;
-  height:36px;
-  border-radius:5px;
-  cursor: pointer;
-  margin:1em auto 2em auto;
+  	display: flex;
+  	justify-content: center; 
+  	border:3px solid #E8E8E8;
+  	width:350px;
+  	height:36px;
+  	border-radius:5px;
+  	cursor: pointer;
+  	margin:1em auto 2em auto;
 }
 .button-block:hover{
 	border:none;
@@ -467,12 +449,12 @@ hr.line {
 	width: 81px;
 	height: 20px;
 	border: none;
-    text-decoration: none;
+        text-decoration: none;
 	justify-content: center; 
-    padding: 8px 8px 8px 20px; 
+        padding: 8px 8px 8px 20px; 
 	display: flex;
-    font-size: 1em;
-    font-family:'robotoregular', sans-serif;
+        font-size: 1em;
+        font-family:'robotoregular', sans-serif;
 }
 .button-one {
 	letter-spacing:0.3px;
@@ -497,24 +479,24 @@ hr.line {
 	border-bottom:3px solid #0066CC;
 	width: 90px;
 	height: 20px;
-    justify-content: center;
+        justify-content: center;
 	z-index:2;
 	}
  
 a:hover .triangle  {
-  border-style: solid;
-  border-width: 7px;
-  border-color: #0066CC transparent transparent transparent;
-  position: relative;
-  top: 31px;
-  right: 30px;
+  	border-style: solid;
+  	border-width: 7px;
+  	border-color: #0066CC transparent transparent transparent;
+  	position: relative;
+  	top: 31px;
+  	right: 30px;
 }
 
 .button-one:hover .triangle  {
-   right: 22px;
+   	right: 22px;
 }
 .button-two:hover .triangle , .button-three:hover .triangle{
-   right: 40px;
+   	right: 40px;
 }
 	
 	
