--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,23 @@
 /* polices personnalisées */
 @font-face {
     font-family: 'robotoregular';
-    src: url('fonts/roboto_regular/Roboto-Regular-webfont.eot');
-    src: url('fonts/roboto_regular/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/roboto_regular/Roboto-Regular-webfont.woff2') format('woff2'),
-         url('fonts/roboto_regular/Roboto-Regular-webfont.woff') format('woff'),
-         url('fonts/roboto_regular/Roboto-Regular-webfont.ttf') format('truetype'),
-         url('fonts/roboto_regular/Roboto-Regular-webfont.svg#robotoregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    src: url('fonts/roboto_regular/Roboto-Regular-webfont.ttf') format('truetype');
 }
+
 @font-face {
     font-family: 'robotothin';
-    src: url('fonts/roboto_thin/Roboto-Thin-webfont.eot');
-    src: url('fonts/roboto_thin/Roboto-Thin-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/roboto_thin/Roboto-Thin-webfont.woff2') format('woff2'),
-         url('fonts/roboto_thin/Roboto-Thin-webfont.woff') format('woff'),
-         url('fonts/roboto_thin/Roboto-Thin-webfont.ttf') format('truetype'),
-         url('fonts/roboto_thin/Roboto-Thin-webfont.svg#robotothin') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
+    src: url('fonts/roboto_thin/Roboto-Thin-webfont.ttf') format('truetype');
+     }
 
 @font-face {
     font-family: 'robotobold';
-    src: url('Roboto-Bold-webfont.eot');
-    src: url('Roboto-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Roboto-Bold-webfont.woff2') format('woff2'),
-         url('Roboto-Bold-webfont.woff') format('woff'),
-         url('Roboto-Bold-webfont.ttf') format('truetype'),
-         url('Roboto-Bold-webfont.svg#robotobold') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    src: url('Roboto-Bold-webfont.ttf') format('truetype');
 
 }
+
 @font-face {
     font-family: 'roboto_condensedregular';
-    src: url('RobotoCondensed-Regular-webfont.eot');
-    src: url('RobotoCondensed-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('RobotoCondensed-Regular-webfont.woff2') format('woff2'),
-         url('RobotoCondensed-Regular-webfont.woff') format('woff'),
-         url('RobotoCondensed-Regular-webfont.ttf') format('truetype'),
-         url('RobotoCondensed-Regular-webfont.svg#roboto_condensedregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+    src: url('RobotoCondensed-Regular-webfont.ttf') format('truetype');
 }
 
 @font-face {
