--- a/styles.css
+++ b/styles.css
@@ -463,7 +463,6 @@ a:hover .triangle  {
 }
 	
 	
-	
 	/***portolio images***/
 #projets{
   display: grid;
@@ -471,7 +470,6 @@ a:hover .triangle  {
   grid-gap: 30px;
   
   }
-/***?????{align-items: stretch justify-items: stretch;}***/
   
 #projets img {
   border: none;
@@ -547,7 +545,6 @@ figcaption .title  {
 	margin-right: 0;
 	margin-left:10px;
 	position:relative;
-	
   }
 
  .iframe-map{
@@ -563,8 +560,6 @@ figcaption .title  {
   width:100%;
   height:95vh;
   background-color: #008CBA;
-
-  
  }
 
 	
@@ -578,15 +573,15 @@ form {
 	position:absolute;
 	right: 10%;
    	bottom: 10%;
-  			
+	
 }
     
 	
 .sent {
 	  padding:10px 10px;
-      margin: 10px;
+         margin: 10px;
 	  width:220px;
-      height: 10px;
+           height: 10px;
 	  background:#FFFFFF;
 	  border-bottom: 1px  #FFFFFF;
 	  border-top: 1px  #FFFFFF;
@@ -615,24 +610,19 @@ h1 {
       margin: 10px; 
       font-family: 'roboto', sans-serif;
 	  font-size: 1.2em;
-	  
- 
-}
+	}
 
 p {
      margin: 10px; 
      font-family: 'robotothin', sans-serif;
 	 font-size: 0.8em; 
 	 font-weight:bold;
-	 
-   
 }
 
 p span{
      font-weight: bold;
      font-family: 'roboto', sans-serif;
-     font-size: 1.2em;
-     
+     font-size: 1.2em; 
 }
 
 button {
@@ -729,11 +719,12 @@ display:none;
 	padding-left:80px; 
 	}
 
-.slider-text p{
+
+	.slider-text p{
 	font-size: 1em;
 	line-height: 1.5em;
 	letter-spacing: 0px;
-	padding-left:80px; ;
+	padding-left:80px; 
 	margin-bottom:100px;
 	text-align:left;
 		}
@@ -937,7 +928,7 @@ header nav {
 	font-size: 1.5em;
 	line-height: 1.3em;
 	letter-spacing: 0px;
-	padding-left:80px; ;
+	padding-left:80px;
 	margin-bottom:100px;
 	text-align:left;
 		}
