--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,7 @@
 @font-face {
     font-family: 'robotobold';
     src: url('fonts/Roboto-Bold.ttf') format('truetype');
-
 }
-
 
 @font-face {
   font-family: 'FontAwesome';
@@ -25,7 +23,7 @@
 }
 
   body {
-    	background-color:#FFFFFF;
+    background-color:#FFFFFF;
 	margin: 0;
 	overflow-x: hidden;
 
@@ -33,13 +31,13 @@
 
  /**************************** Menu ***********************************/
 header{
-        display:flex;
-        z-index:20;
-        top:0; 
-        left:0;
-        right:0;
-        height:auto;
-        position:fixed;
+    display:flex;
+    z-index:20;
+    top:0; 
+    left:0;
+    right:0;
+    height:auto;
+    position:fixed;
 	margin-right:auto;
 	margin-left:10px;
 	margin-bottom:20px;
@@ -47,18 +45,18 @@ header{
 	}
 
   header img {
-	 margin-left:220px;
-	 margin-top: 25px; 
-	 margin-bottom: 10px;
+	margin-left:220px;
+	margin-top: 25px; 
+	margin-bottom: 10px;
 		 }
    
 header nav {
 	margin-top: 35px;
-    	margin-bottom: 40px;
-        margin-right:100px;
-        word-spacing: 1em;
-        text-align: right;
-        width: 100%;
+    margin-bottom: 40px;
+    margin-right:100px;
+    word-spacing: 1em;
+    text-align: right;
+    width: 100%;
   	 }
      
 header nav a {
@@ -71,9 +69,9 @@ header nav a {
 }
 
 header nav a:hover{   
-        padding-top: 32px;
-        font-family:'robotothin';
-        border-top: 3px solid #5897D0;  /* BLUE*/
+    padding-top: 32px;
+    font-family:'robotothin';
+    border-top: 3px solid #5897D0;  /* BLUE*/
  }
 
 /************************************************************* page 1 ACCEUIL ***************************************************/
@@ -101,11 +99,23 @@ header nav a:hover{
 }
 }
 
+.grey-line{
+	
+       margin-left:0px;
+	border-bottom: 5px solid grey; 
+	height:40px;
+	width: 100%;
+        position:absolute;
+	margin-top:0;
+	margin-bottom:0;
+}
+
 .blue-line {
 	margin-left:0px;
 	width:180px;
 	border-bottom: 5px solid #588dd0; 
- height:40px;  
+	height:40px;
+        position:absolute;	
 }
 
 #slider{
@@ -139,7 +149,7 @@ header nav a:hover{
 
 .slider-text{
 	position: absolute;
-        left: 10%;
+    left: 10%;
 	top: 25%;
 	padding-bottom: 15px;
 	color: #ffffff;
@@ -148,7 +158,7 @@ header nav a:hover{
 }
 
 .slider-text span {
-        color: #5897D0;	
+    color: #5897D0;	
 }
 
 .slider-text h1{
@@ -177,8 +187,8 @@ header nav a:hover{
 	text-decoration: none;
 	text-align:center;
 	border-radius: 4px;
-        border:none;
-        padding: 10px;
+    border:none;
+    padding: 10px;
 	margin-left:12px;
 }
 
@@ -188,7 +198,7 @@ header nav a:hover{
 
 .a-left{
 	position: absolute;
-        left: -1.5%;
+    left: -1.5%;
 	top: 40%;
 }
 
@@ -214,7 +224,7 @@ header nav a:hover{
 		}
 		
 .services-text{  
-       padding: 20px 0 20px 0;
+    padding: 20px 0 20px 0;
    
 }
 
@@ -240,18 +250,18 @@ header nav a:hover{
 #services p { /**********2circles icon***/
 	font-size: 6px;
 	text-align:center;
-        position: relative;
-        z-index:2; 
+    position: relative;
+    z-index:2; 
  } 
 
 hr.line {
 	margin-top:-22px;
 	height: 1.5px;
-        border: 0;
-        background-color: #E8E8E8;
-        width:9%;
-        position: relative;
-        z-index:1;
+    border: 0;
+    background-color: #E8E8E8;
+    width:9%;
+    position: relative;
+    z-index:1;
 }
 	
 /*************************main section page*****/
@@ -266,26 +276,26 @@ hr.line {
 
 
 .services-image {
-        width: 40%;
+    width: 40%;
 	height: auto;
-        min-width:250px;
+    min-width:250px;
 	padding-top:0px;
 	margin:auto;
 				
 }
 
  .services-image img{
-	 margin-top:-150px;
-	 width: 100%;
-         max-width: 510px;
-	 height: auto;
+	margin-top:-150px;
+	width: 100%;
+    max-width: 510px;
+	height: auto;
      
  }
 
 .services-liste {
 	width:40%;
 	height: auto;
-        min-width:250px;
+    min-width:250px;
 	margin:auto;  	
 	}
 	
@@ -351,7 +361,7 @@ hr.line {
 	
 	
 .portfolio-text{  
-   padding: 20px 0 20px 0;
+    padding: 20px 0 20px 0;
 }
 
  .portfolio-text h1{
@@ -375,8 +385,8 @@ hr.line {
 #portfolio p { /**********2circles icon***/
 	font-size: 6px;
 	text-align:center;
-     	position: relative;
-     	z-index:2;
+    position: relative;
+    z-index:2;
 	 
  } 
 
@@ -387,7 +397,7 @@ hr.line {
   	background-color: #DCDCDC;
   	width:10%;
   	position: relative;
- 	 z-index:1;
+ 	z-index:1;
  }
 	
 	/**********portfolio buttons********/
@@ -412,12 +422,12 @@ hr.line {
 	width: 81px;
 	height: 20px;
 	border: none;
-        text-decoration: none;
+    text-decoration: none;
 	justify-content: center; 
-        padding: 8px 8px 8px 20px; 
+    padding: 8px 8px 8px 20px; 
 	display: flex;
-        font-size: 1em;
-        font-family:'robotoregular', sans-serif;
+    font-size: 1em;
+    font-family:'robotoregular', sans-serif;
 }
 .button-one {
 	letter-spacing:0.3px;
@@ -442,7 +452,7 @@ hr.line {
 	border-bottom:3px solid #0066CC;
 	width: 90px;
 	height: 20px;
-        justify-content: center;
+    justify-content: center;
 	z-index:2;
 	}
  
@@ -463,56 +473,58 @@ a:hover .triangle  {
 }
 	
 	
+	
 	/***portolio images***/
 #projets{
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 30px;
   
   }
+/***?????{align-items: stretch justify-items: stretch;}***/
   
 #projets img {
   border: none;
-  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
-  max-width: 100%;
-  cursor: pointer;
+    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    max-width: 100%;
+    cursor: pointer;
 }
 .container {
-position: relative;
-padding: 0;
-margin: 0;
+	position: relative;
+	padding: 0;
+	margin: 0;
 }
 
 .container img {
-display: block;
-width: 100%;
-height: auto;
+	display: block;
+	width: 100%;
+	height: auto;
 }
 
 figcaption {
-opacity:0;
-position: absolute;
-width: 100%;
-height: 30%;
-left: 0;
-bottom: 0;
-padding: 0.5em;
-z-index: 2;
-box-sizing: border-box;
-background-color: rgba(0, 0, 0, 0.4);/***use RGBA color values to not apply opacity to child element***/
+	opacity:0;
+	position: absolute;
+	width: 100%;
+	height: 30%;
+	left: 0;
+	bottom: 0;
+	padding: 0.5em;
+	z-index: 2;
+	box-sizing: border-box;
+	background-color: rgba(0, 0, 0, 0.4);/***use RGBA color values to not apply opacity to child element***/
 
 }
 
 figcaption:hover{
-opacity:1;
-color: #FFFFFF;
+	opacity:1;
+	color: #FFFFFF;
 }
 
 figcaption .title  {
-  margin-top:0.2em;
-  font-family:'robotoregular', sans-serif;
-  font-size:0.9em;
-  font-weight:600;
+    margin-top:0.2em;
+    font-family:'robotoregular', sans-serif;
+    font-size:0.9em;
+    font-weight:600;
  }
 
  figcaption .description  {
@@ -522,12 +534,12 @@ figcaption .title  {
  }
  
  .eye{
-    	left: 240px;
-    	top:-13em;
-    	width: 31px;
-    	height: 31px;
-    	border: 4px solid #FFFFFF;
-    	border-radius: 50%;   
+    left: 240px;
+    top:-13em;
+    width: 31px;
+    height: 31px;
+    border: 4px solid #FFFFFF;
+    border-radius: 50%;   
  }
   
 .eye .fa-stack.fa-2x {
@@ -545,100 +557,108 @@ figcaption .title  {
 	margin-right: 0;
 	margin-left:10px;
 	position:relative;
+	
   }
 
  .iframe-map{
-  width:100%;
-  height:95vh;
-  border:none;
-  opacity: 0.6;
+    width:100%;
+    height:95vh;
+    border:none;
+	opacity: 0.6;
   
 } 
   
   
 #blue-overlay{
-  width:100%;
-  height:95vh;
-  background-color: #008CBA;
+	width:100%;
+	height:95vh;
+	background-color: #008CBA;
+
+  
  }
 
 	
 form {
 	width:269px;
 	border: 2px solid #F5F5F5;
-    	background-color:#F5F5F5;
-    	box-shadow:0 8px 10px #FFFFFF, 0 4px 4px;
+    background-color:#F5F5F5;
+    box-shadow:0 8px 10px #FFFFFF, 0 4px 4px;
 	opacity:0.9;
 	padding: 5px 10px 5px 10px;
 	position:absolute;
 	right: 10%;
    	bottom: 10%;
-	
+  			
 }
     
 	
 .sent {
-	  padding:10px 10px;
-         margin: 10px;
-	  width:220px;
-           height: 10px;
-	  background:#FFFFFF;
-	  border-bottom: 1px  #FFFFFF;
-	  border-top: 1px  #FFFFFF;
-	  border-left:1px  #FFFFFF;
-      border-right:1px #FFFFFF;
-      font-family: 'roboto', sans-serif;
-	  font-size: 0.7em;
+	padding:10px 10px;
+    margin: 10px;
+	width:220px;
+    height: 10px;
+	background:#FFFFFF;
+	border-bottom: 1px  #FFFFFF;
+	border-top: 1px  #FFFFFF;
+	border-left:1px  #FFFFFF;
+    border-right:1px #FFFFFF;
+    font-family: 'roboto', sans-serif;
+	font-size: 0.7em;
 }
 
 .message {
-      	padding:10px 10px;
-      	margin: 10px;
-	  width:220px;
-      	  height: 130px;
-	  background:#FFFFFF;
-	  border-bottom: 1px  #FFFFFF;
-	  border-top: 1px  #FFFFFF;
-	  border-left:1px  #FFFFFF;
-      border-right:1px #FFFFFF;
-      font-family: 'roboto', sans-serif;
-	  font-size: 0.7em;
+    padding:10px 10px;
+    margin: 10px;
+	width:220px;
+    height: 130px;
+	background:#FFFFFF;
+	border-bottom: 1px  #FFFFFF;
+	border-top: 1px  #FFFFFF;
+	border-left:1px  #FFFFFF;
+    border-right:1px #FFFFFF;
+    font-family: 'roboto', sans-serif;
+	font-size: 0.7em;
  	  
 }
 
 h1 {
-      margin: 10px; 
-      font-family: 'roboto', sans-serif;
-	  font-size: 1.2em;
-	}
+    margin: 10px; 
+    font-family: 'roboto', sans-serif;
+	font-size: 1.2em;
+	  
+ 
+}
 
 p {
-     margin: 10px; 
-     font-family: 'robotothin', sans-serif;
-	 font-size: 0.8em; 
-	 font-weight:bold;
+    margin: 10px; 
+    font-family: 'robotothin', sans-serif;
+	font-size: 0.8em; 
+	font-weight:bold;
+	 
+   
 }
 
 p span{
-     font-weight: bold;
-     font-family: 'roboto', sans-serif;
-     font-size: 1.2em; 
+    font-weight: bold;
+    font-family: 'roboto', sans-serif;
+    font-size: 1.2em;
+     
 }
 
 button {
-    	margin: 10px; 
-    	color: #ffffff;
+    margin: 10px; 
+    color: #ffffff;
 	background-color:#5897D0;
 	font-family: 'roboto', sans-serif;
 	font-size: 0.8em;
 	text-decoration: none;
 	text-align:left;
 	border-radius: 2px;
-    	border:none;
-    	padding: 10px;
-    	width: 130px;
-    	box-shadow: 2px 2px 2px #436979;
-    	cursor: pointer;
+    border:none;
+    padding: 10px;
+    width: 130px;
+    box-shadow: 2px 2px 2px #436979;
+    cursor: pointer;
 } 
 
 
@@ -683,8 +703,12 @@ header nav a{
 	min-height:40vh;
 	padding-top:80px;
 }
-.blue-line {
- display: none;
+	
+.blue-line{
+	display: none;}
+	
+ .grey-line {
+	display: none;
 }
 
 
@@ -697,7 +721,7 @@ header nav a{
 
 #slider2{
 	display: none;
-	 		}
+	}
 
 .slider-text{
 	margin-top: 5%;
@@ -719,13 +743,12 @@ display:none;
 	padding-left:80px; 
 	}
 
-
-	.slider-text p{
+.slider-text p{
 	font-size: 1em;
 	line-height: 1.5em;
 	letter-spacing: 0px;
 	padding-left:80px; 
-	margin-bottom:100px;
+	margin-bottom:80px;
 	text-align:left;
 		}
 
@@ -789,7 +812,7 @@ display:none;
 
 
 .services-image img {
-    	margin-top:15px;
+    margin-top:15px;
 	margin-bottom:15px;
 			   	}	
 
@@ -822,8 +845,10 @@ article {
 
 	
 	 /****4-CONTACT***/
-form{
-        background: #DCDCDCy;
+
+
+form{  	
+	background: #DCDCDCy;
 	left: 0;
 	bottom:40%;
 	padding: 15px 0px 15px 0px;
@@ -832,6 +857,8 @@ form{
 	width: 85%;
 	transform: translate(0);
 	}
+		
+			
 		
 .sent, .message{
 	width: 90%;
@@ -889,68 +916,23 @@ header nav {
 #accueil{
 	min-height:45vh;
 	padding-top:100px;
-}
-.blue-line {
-	 display: none;
-}
-
-#slider1{
-	float: none;
-	animation: stop;
-	margin-top:30px;
-	margin-bottom:50px;	
-}
-
-#slider2{
-	display: none;
-	 		}
-
-.slider-text{
-	margin-top: 0%;
-	margin-left:15%;
-	position:static;
-	color:#585858;
-}
-
-.slider-text h1{
-	margin-bottom:1em;
-	font-size: 1.8em;
-	line-height: 1.2em;
-	letter-spacing: 0;
 	}
-	
-.slider-text p{
-	font-size: 1.5em;
-	line-height: 1.3em;
-	letter-spacing: 0px;
-	padding-left:80px;
-	margin-bottom:100px;
+.slider-text{
+	position: absolute;
+    left: 8%;
+	top: 25%;
+	padding-bottom: 15px;
+	text-align: left; 
+	width:650px;
+	}
+	 
+.slider-text h1{
 	text-align:left;
 		}
- 
-.slider-text a {
-	font-size: 1.1em;
-	padding: 10px;
-	margin-left:80px;	
-  }
 
+.slider-text p{
+	text-align:left;
 	
-	
-.arrows{
-	font-size:0.5em}
-	
-
-.a-left{
-	top: 25%;
-}
-
-.a-right{
-	
-    top: 25%;
-}
-
-
-	 
 
  /****2-SERVICES***/
  
@@ -992,7 +974,7 @@ header nav {
 
 
 .services-image img {
-    	margin-top:0;
+    margin-top:0;
 	   	}
 	
 
@@ -1023,10 +1005,13 @@ header nav {
 
 form{
 	right: 30%;
-    	bottom: 20%;
-	width:430px;
-	height:650px;	
-	background: #DCDCDCy;}
+	left: 20%;
+        width:430px;
+	background: #DCDCDCy;
+	transform: translate(0);
+	}
+	
+	
 
 .sent {
 	width: 85%;
@@ -1058,4 +1043,3 @@ button{
 }
 
 }
-
