--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@
     background-color:#FFFFFF;
 	margin: 0;
 	overflow-x: hidden;
+
 }
 
  /**************************** Menu ***********************************/
@@ -100,11 +101,11 @@ header nav a:hover{
 
 .grey-line{
 	
-       margin-left:0px;
+    margin-left:0px;
 	border-bottom: 5px solid #C0C0C0; 
 	height:40px;
 	width: 100%;
-        position:absolute;
+    position:absolute;
 	margin-top:0;
 	margin-bottom:0;
 }
@@ -114,14 +115,14 @@ header nav a:hover{
 	width:180px;
 	border-bottom: 5px solid #588dd0; 
 	height:40px;
-        position:absolute;	
+    position:absolute;	
 }
 
 #slider{
 	position:relative;
-        width:100%;
+    width:100%;
 	top: 50px;
-        margin-bottom:10px;
+    margin-bottom:10px;
 	z-index:1;
 	overflow:hidden;
 }
@@ -134,8 +135,8 @@ header nav a:hover{
 	margin-left:0px;
 	margin-right:0;
 	position:relative;
+	
 }
-
 #slider2{
 	margin-left: -100%;
 	float: left;
@@ -143,11 +144,12 @@ header nav a:hover{
 	width:100%;
 	height:auto;
 	position:relative;
+	
 }
 
 .slider-text{
 	position: absolute;
-        left: 10%;
+    left: 10%;
 	top: 25%;
 	padding-bottom: 15px;
 	color: #ffffff;
@@ -248,18 +250,18 @@ header nav a:hover{
 #services p { /**********2circles icon***/
 	font-size: 6px;
 	text-align:center;
-    	position: relative;
-    	z-index:2; 
+    position: relative;
+    z-index:2; 
  } 
 
 hr.line {
 	margin-top:-22px;
 	height: 1.5px;
-    	border: 0;
-    	background-color: #E8E8E8;
-    	width:9%;
-   	position: relative;
-    	z-index:1;
+    border: 0;
+    background-color: #E8E8E8;
+    width:9%;
+    position: relative;
+    z-index:1;
 }
 	
 /*************************main section page*****/
@@ -569,7 +571,7 @@ figcaption .title  {
   
 #blue-overlay{
 	width:100%;
-	height:95vh;
+	height:100vh;
 	background-color: #008CBA;
 
   
@@ -578,7 +580,7 @@ figcaption .title  {
 	
 form {
 	width:269px;
-	border: 2px solid #F5F5F5;
+	border: 2px solid #E8E8E8;
     background-color:#F5F5F5;
     box-shadow:0 8px 10px #FFFFFF, 0 4px 4px;
 	opacity:0.9;
@@ -595,7 +597,7 @@ form {
     margin: 10px;
 	width:220px;
     height: 10px;
-	background:#FFFFFF;
+	background:#F8F8F8;
 	border-bottom: 1px  #FFFFFF;
 	border-top: 1px  #FFFFFF;
 	border-left:1px  #FFFFFF;
@@ -609,7 +611,7 @@ form {
     margin: 10px;
 	width:220px;
     height: 130px;
-	background:#FFFFFF;
+	background:#F8F8F8;
 	border-bottom: 1px  #FFFFFF;
 	border-top: 1px  #FFFFFF;
 	border-left:1px  #FFFFFF;
@@ -675,11 +677,11 @@ header{
        }
 	
  header img {
-	 margin-left:0px;
-	 margin-top:5px;
-	 margin-bottom:0px;
-	 width:208.8px;
-	 height:45,6px;
+	margin-left:0px;
+	margin-top:5px;
+	margin-bottom:0px;
+	width:208.8px;
+	height:45,6px;
 		 }
 	 
 header nav {
@@ -701,8 +703,8 @@ header nav a{
 	min-height:40vh;
 	padding-top:80px;
 }
-	
-.blue-line{
+.blue-line
+{
 	display: none;}
 	
  .grey-line {
@@ -719,7 +721,7 @@ header nav a{
 
 #slider2{
 	display: none;
-	}
+	 		}
 
 .slider-text{
 	margin-top: 5%;
@@ -846,7 +848,7 @@ article {
 
 
 form{  	
-	background: #DCDCDCy;
+	background: #DCDCDC;
 	left: 0;
 	bottom:40%;
 	padding: 15px 0px 15px 0px;
@@ -917,7 +919,7 @@ header nav {
 	}
 .slider-text{
 	position: absolute;
-       left: 8%;
+    left: 8%;
 	top: 25%;
 	padding-bottom: 15px;
 	text-align: left; 
@@ -930,7 +932,7 @@ header nav {
 
 .slider-text p{
 	text-align:left;
-	}
+}
 
  /****2-SERVICES***/
  
@@ -1005,7 +1007,7 @@ form{
 	right: 30%;
 	left: 20%;
         width:430px;
-	background: #DCDCDCy;
+	background: #DCDCDC;
 	transform: translate(0);
 	}
 	
