--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ header{
 		 }
    
 header nav {
-    margin-top: 35px;
+	margin-top: 35px;
     margin-bottom: 40px;
     margin-right:100px;
     word-spacing: 1em;
@@ -80,8 +80,9 @@ header nav a:hover{
 	margin-right: 0;
 	margin-left:10px;
 	height:auto;
+	min-height:80vh;
 	max-width:100vw;
-	}
+		}
 
 @keyframes slider{
 	0% {
@@ -187,8 +188,8 @@ header nav a:hover{
 	text-decoration: none;
 	text-align:center;
 	border-radius: 4px;
-    	border:none;
-    	padding: 10px;
+    border:none;
+    padding: 10px;
 	margin-left:12px;
 }
 
@@ -214,7 +215,7 @@ header nav a:hover{
 	padding-left: 6em;
 	padding-right:6em;
 	padding-bottom:3em;
-	padding-top: 5em;
+	padding-top: 8em;
 	height:auto;
 	max-width:100vw;
 	margin-right: 0;
@@ -352,7 +353,7 @@ hr.line {
 	padding-left: 6em;
 	padding-right:6em;
 	padding-bottom:3em;
-	padding-top: 5em;
+	padding-top: 8.5em;
 	height:auto;
 	max-width:100vw;
 	margin-right: 0;
@@ -571,7 +572,7 @@ figcaption .title  {
   
 #blue-overlay{
 	width:100%;
-	height:100vh;
+	height:95vh;
 	background-color: #008CBA;
 
   
@@ -681,7 +682,7 @@ header{
 	margin-top:5px;
 	margin-bottom:0px;
 	width:208.8px;
-		 }
+			 }
 	 
 header nav {
 	text-align: center;
@@ -691,6 +692,7 @@ header nav a{
 	font-size:1.6em;
 	word-spacing: 0.5em;    
 }
+
 	
  header nav a:hover{
 	border-top:none;
@@ -768,8 +770,7 @@ display:none;
 	
 	
  /****2-SERVICES***/
- 
-	  
+  
  .services-text{
 	 padding-bottom:0;
 	 padding-left:0;
@@ -816,10 +817,7 @@ display:none;
 
 	
  /****3-PORTFOLIO***/
- #portfolio{
-	padding-top:0em;
-		}
-	
+
  hr.line{
   	height: 1px;
   	width:30%;
@@ -915,6 +913,7 @@ header nav {
 	padding-bottom:10px;
 	padding-top:100px;
 	}
+	
 .slider-text{
 	position: absolute;
     left: 8%;
@@ -1004,11 +1003,11 @@ header nav {
 form{
 	right: 30%;
 	left: 20%;
-        width:430px;
+    width:430px;
 	background: #DCDCDC;
 	transform: translate(0);
 	}
-	
+
 	
 
 .sent {
