--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ header nav a:hover{
     margin-left:0px;
 	border-bottom: 5px solid #C0C0C0; 
 	height:40px;
-	width: 100%;
+	width: 99.8%;
     position:absolute;
 	margin-top:0;
 	margin-bottom:0;
@@ -201,6 +201,7 @@ header nav a:hover{
 	position: absolute;
     left: -1.5%;
 	top: 40%;
+	
 }
 
 .a-right{
@@ -482,7 +483,6 @@ a:hover .triangle  {
     grid-gap: 30px;
   
   }
-/***?????{align-items: stretch justify-items: stretch;}***/
   
 #projets img {
   border: none;
@@ -580,60 +580,40 @@ figcaption .title  {
 
 	
 form {
-	width:269px;
-	border: 2px solid #E8E8E8;
-    background-color:#F5F5F5;
-    box-shadow:0 8px 10px #FFFFFF, 0 4px 4px;
-	opacity:0.9;
-	padding: 5px 10px 5px 10px;
-	position:absolute;
-	right: 10%;
-   	bottom: 10%;
-  			
+ position: relative;
+  width: 20em;
+  left: 70em;
+  bottom: 40em;
+  background-color: rgba(255, 255, 255, .7);
+  padding: 10px 10px;
 }
     
 	
 .sent {
-	padding:10px 10px;
-    margin: 10px;
-	width:220px;
-    height: 10px;
-	background:#F8F8F8;
-	border-bottom: 1px  #FFFFFF;
-	border-top: 1px  #FFFFFF;
-	border-left:1px  #FFFFFF;
-    border-right:1px #FFFFFF;
-    font-family: 'roboto', sans-serif;
-	font-size: 0.7em;
+ padding: 3px 3px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  width: 98%;
+  margin: .7em 0;
+  line-height: 22px;
+  font-family: 'roboto', sans-serif;
 }
 
-.message {
-    padding:10px 10px;
-    margin: 10px;
-	width:220px;
-    height: 130px;
-	background:#F8F8F8;
-	border-bottom: 1px  #FFFFFF;
-	border-top: 1px  #FFFFFF;
-	border-left:1px  #FFFFFF;
-    border-right:1px #FFFFFF;
-    font-family: 'roboto', sans-serif;
-	font-size: 0.7em;
- 	  
+textarea {
+    height: 14.5em;
+    
 }
 
 h1 {
     margin: 10px; 
     font-family: 'roboto', sans-serif;
 	font-size: 1.2em;
-	  
- 
-}
+	}
 
 p {
     margin: 10px; 
     font-family: 'robotothin', sans-serif;
-	font-size: 0.8em; 
+	font-size: 0.9em; 
 	font-weight:bold;
 	 
    
@@ -702,6 +682,7 @@ header nav a{
 #accueil{
 	min-height:40vh;
 	padding-top:80px;
+	
 }
 .blue-line
 {
@@ -711,6 +692,10 @@ header nav a{
 	display: none;
 }
 
+#slider{
+	width:100%;
+	margin:0;
+}
 
 #slider1{
 	float: none;
@@ -842,34 +827,24 @@ article {
 	
 	 /****4-CONTACT***/
 
-
-form{  	
-	background: #DCDCDC;
-	left: 0;
-	bottom:40%;
-	padding: 15px 0px 15px 0px;
-	margin-left: 10%;
-	margin-right: 20%;
-	width: 85%;
-	transform: translate(0);
-	}
+form {
+        position: relative;
+        top: -38em;
+        left: 0;
+        margin: 1.2em auto;
+        width: 65%;
+    }
+textarea {
+        height: 5em;
+    }
 		
-			
-		
-.sent, .message{
-	width: 90%;
-	max-width: 90%;
-	font-size:0.8em;
-	margin-left:20px;
-		
-}
 h1, p {
 	text-align:center;
-	font-size:1em;
+	font-size:0.8em;
     
 }
 button{
-	margin-left: 40%;
+	margin-left: 25%;
 }
 
 }
@@ -889,7 +864,7 @@ header nav {
     	}
 
 header nav a {
-	font-size:1.6em;
+	font-size:1.3em;
 	padding-top:25px;
 	}
 
@@ -925,10 +900,16 @@ header nav {
 	 
 .slider-text h1{
 	text-align:left;
+	font-size: 1.5em;
 		}
 
 .slider-text p{
 	text-align:left;
+	font-size: 0.8em;
+}
+
+.slider-text a{
+	font-size: 0.8em;
 }
 
  /****2-SERVICES***/
@@ -1000,35 +981,20 @@ header nav {
 
 /*****4- CONTACT****/
 
-form{
-	right: 30%;
-	left: 20%;
-    width:430px;
-	background: #DCDCDC;
-	transform: translate(0);
-	}
+textarea {
+        height: 7em;
+    }
 
-	
+form {
+      left: 22em;
+      bottom: 38em;
+      height: 85%;
+    }
 
-.sent {
-	width: 85%;
-	height:5%;
-	max-width: 85%;
-	font-size:0.8em;
-	margin-left:20px;
-		
-}
-.message{
-	width: 85%;
-	height:15%;
-	max-width: 85%;
-	font-size:0.8em;
-	margin-left:20px;
-	margin-bottom:30px;}
 
 h1, p {
-	text-align:center;
-	font-size:1.1em;
+	text-align:left;
+	font-size:1em;
 	margin-left:20px;
 	margin-bottom:30px;
     
@@ -1039,4 +1005,5 @@ button{
 	
 }
 
+}
 }
