--- a/styles.css
+++ b/styles.css
@@ -994,7 +994,14 @@ display:none;
     margin-top:0;
 	   	}
 	
-
+hr.line {
+    margin-top:-22px;
+    height: 1.5px;
+    border: 0;
+    background-color: orange;
+    width:9%;
+    position: relative;
+    z-index:1;
 
 /****3-PORTFOLIO***/
 .portfolio-text{  
