--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@
 
 }
 
- /**************************** Menu ***********************************/
+ /*************************** Menu ***********************************/
 header{
     display:flex;
     z-index:20;
